Script Code for CRUD operations

--- a/index.html
+++ b/index.html
@@ -4,38 +4,37 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CRUD Form Example</title>
+  <title>Story CRUD</title>
   <link rel="stylesheet" href="style.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="script.js" defer></script>
 </head>
 
 <body>
+  <h1>Story CRUD Application</h1>
 
-  <div class="task-form">
-    <h2>Task Form</h2>
-    <input type="text" id="taskName" placeholder="Task Name">
-    <input type="hidden" id="taskId">
-    <button id="saveTask">Save Task</button>
-    <button id="resetForm">Reset</button>
+  <div class="form-container">
+    <input type="hidden" id="storyId">
+    <input type="text" id="storyTitle" placeholder="Title">
+    <textarea id="storyContent" placeholder="Content"></textarea>
+    <button id="saveStory">Save Story</button>
+    <button id="loadStories">Refresh Stories</button>
   </div>
 
-  <div class="task-list">
-    <button id="loadTasks">Load Tasks</button>
-    <table>
-      <thead>
-        <tr>
-          <th>ID</th>
-          <th>Task</th>
-          <th>Actions</th>
-        </tr>
-      </thead>
-      <tbody id="taskTableBody">
-        <!-- Tasks will be loaded here -->
-      </tbody>
-    </table>
-  </div>
+  <table id="storyTable">
+    <thead>
+      <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Content</th>
+        <th>Actions</th>
+      </tr>
+    </thead>
+    <tbody id="storyTableBody">
+      <!-- Stories will be loaded here dynamically -->
+    </tbody>
+  </table>
 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
